# FreeYourDisk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.fr.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  macos.yml  release.yml  windows.yml
crates/core-ipc/: Cargo.toml
crates/core-ipc/src/: lib.rs
crates/core-scan/: Cargo.toml
crates/core-scan/src/: cache.rs  lib.rs
crates/core-services/: Cargo.toml
crates/core-services/src/: app_cache.rs  big_files.rs  dev_cache.rs  git_repos.rs  lib.rs  temp.rs
crates/core-trash/: Cargo.toml
crates/core-trash/src/: lib.rs
crates/privhelper/: Cargo.toml
crates/privhelper/src/: main.rs
crates/privhelper/tests/: validation.rs
docs/: BUILD_MACOS.md
docs/superpowers/plans/: 2026-06-25-freeyourdisk.md  2026-06-26-windows-port-phase-0-compile-gate.md  2026-06-26-windows-port-phase-1-paths-scan-clean.md  2026-06-26-windows-port-phase-2-elevation.md  2026-06-26-windows-port-phase-3-health-smart.md  2026-06-26-windows-port-phase-4-task-manager.md  2026-06-26-windows-port-phase-5-applications.md  2026-06-26-windows-port-phase-6-scheduling-ux.md  2026-06-26-windows-port-phase-7-packaging-release.md
docs/superpowers/specs/: 2026-06-25-freeyourdisk-design.md  2026-06-26-windows-port-design.md
packaging/: io.freeyourdisk.policy  net.rlconseil.FreeYourDisk.metainfo.xml
packaging/deb/: changelog  copyright  freeyourdisk.1
packaging/systemd/: freeyourdisk.service  freeyourdisk.timer
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: applications.rs  commands.rs  execute.rs  filetypes.rs  headless.rs  health.rs  main.rs  monitor.rs  services.rs  settings.rs  shortcut.rs  smartdeps.rs  snapshot.rs  state.rs  taskmgr.rs  toast.rs  tray.rs
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css  main.ts
ui/src/lib/: api.test.ts  api.ts  format.test.ts  format.ts  icons.ts  reclaim.ts  scan.ts  settings.ts  stores.ts  theme.ts
ui/src/lib/components/: Chart.svelte  ConfirmDrawer.svelte  DiskDonut.svelte  Donut3D.svelte  ItemList.svelte  ItemsTable.svelte  LowSpaceModal.svelte  Report.svelte  ScheduleToggle.svelte  ServiceCard.svelte  ServiceChart.svelte  Sidebar.svelte  StateBlock.svelte  Switch.svelte  Toasts.svelte  TypeBar.svelte
ui/src/lib/i18n/: en.json  fr.json  index.ts
ui/src/lib/views/: Applications.svelte  Dashboard.svelte  Health.svelte  Home.svelte  ServiceView.svelte  Settings.svelte  TaskManager.svelte  TrayWidget.svelte
