# SPDX-License-Identifier: GPL-3.0-or-later
[workspace]
resolver = "2"
members = [
    "crates/core-ipc",
    "crates/core-scan",
    "crates/core-trash",
    "crates/core-services",
    "crates/privhelper",
    "src-tauri",
]

[workspace.package]
version = "0.4.1"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["rony <rony@rlconseil.net>"]
repository = "https://github.com/rony/FreeYourDisk"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
jwalk = "0.8"
rayon = "1"
# Local-only git operations: no https/ssh transport needed → lighter deps.
git2 = { version = "0.21", default-features = false }
trash = "5"
anyhow = "1"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
