[package]
name = "freeyourdisk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
default-run = "freeyourdisk"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { workspace = true }
serde_json = { workspace = true }
core-ipc = { path = "../crates/core-ipc" }
core-trash = { path = "../crates/core-trash" }
core-services = { path = "../crates/core-services" }
core-scan = { path = "../crates/core-scan" }
sysinfo = "0.39"
jwalk = { workspace = true }
tauri-plugin-global-shortcut = "2"
dirs = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
