[package]
name = "core-services"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
core-ipc = { path = "../core-ipc" }
core-scan = { path = "../core-scan" }
git2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
