[package]
name = "freeyourdisk-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "freeyourdisk-helper"
path = "src/main.rs"

[dependencies]
core-ipc = { path = "../core-ipc" }
core-trash = { path = "../core-trash" }
serde_json = { workspace = true }
